--- a/Segmented.ipynb
+++ b/Segmented.ipynb
@@ -22,7 +22,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
+   "id": "602f1d91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3 event files to merge for run: SNHF08_Session3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Merge events files \n",
+    "all_events_path = r\"D:\\Box Sync\\Box Sync\\00_BEAR_Lab\\Projects\\Kyler(Kihun) Hong\\1st_Haptic Sleeve\\PilotExperiment\\MotorLearning\\20260105_SNHF08_Session3\"\n",
+    "all_events_files = glob.glob(os.path.join(all_events_path, \"*_events.csv\"))\n",
+    "all_events_df = pd.DataFrame()\n",
+    "\n",
+    "# Use folder name to create file label: \n",
+    "folder_main   = Path(all_events_path).name \n",
+    "parts = folder_main.split('_')\n",
+    "if parts and re.fullmatch(r\"\\d{8}\", parts[0]):\n",
+    "    run_label = \"_\".join(parts[1:])       # \"SHF01_Session1\"\n",
+    "else:\n",
+    "    run_label = folder_main              # use full folder name\n",
+    "n_files = len(all_events_files)\n",
+    "print(f\"Found {n_files} event files to merge for run: {run_label}\")\n",
+    "\n",
+    "if n_files <= 1:\n",
+    "    print(\"Only 1 (or 0) events file -> skipping merge and save.\")\n",
+    "else:\n",
+    "    all_events_df = pd.DataFrame()\n",
+    "\n",
+    "    for file in all_events_files:\n",
+    "        try:\n",
+    "            temp_df = pd.read_csv(file, sep=\"\\t\")\n",
+    "            all_events_df = pd.concat([all_events_df, temp_df], ignore_index=True)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error reading {file}: {e}\")\n",
+    "            traceback.print_exc()\n",
+    "\n",
+    "    all_events_df.reset_index(drop=True, inplace=True)\n",
+    "    out_name = f\"{run_label}_combined_events.csv\"\n",
+    "    out_path = os.path.join(all_events_path, out_name)\n",
+    "    # all_events_df.to_csv(out_path, index=False, sep='\\t')\n",
+    "\n",
+    "\n",
+    "# Define event name and save it \n",
+    "# all_events_df.to_csv(os.path.join(all_events_path, \"SHF01_Session1_combined_events.csv\"), index=False, sep='\\t')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "9a142fa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    session  trial comment_label comment_value\n",
+      "0         3      0          good           1.0\n",
+      "1         3      1          good           0.0\n",
+      "2         3      2          good           0.0\n",
+      "3         3      3          good           2.0\n",
+      "4         3      4          good           0.0\n",
+      "5         3      5          good           0.0\n",
+      "6         3      6          good           0.0\n",
+      "7         3      7          good           0.0\n",
+      "8         3      8          fail          <NA>\n",
+      "9         3      9          good           1.0\n",
+      "10        3     10          good           0.0\n",
+      "11        3     11          good           0.0\n",
+      "12        3     12          good           0.0\n",
+      "13        3     13          good           0.0\n",
+      "14        3     14          good           0.0\n",
+      "15        3     15          good           0.0\n",
+      "16        3     16          good           1.0\n",
+      "17        3     17          good           0.0\n",
+      "18        3     18          good           1.0\n",
+      "19        3     19          good           0.0\n",
+      "20        3     20          good           0.0\n",
+      "21        3     21          good           0.0\n",
+      "22        3     22          good           0.0\n",
+      "23        3     23          good           0.0\n",
+      "24        3     24          good           1.0\n",
+      "25        3     25          good           0.0\n",
+      "26        3     26          good           0.0\n",
+      "27        3     27          good           0.0\n",
+      "28        3     28          fail          <NA>\n",
+      "29        3     29          good           0.0\n",
+      "30        3     30          good           2.0\n",
+      "31        3     31          good           1.0\n",
+      "32        3     32          good           0.0\n",
+      "33        3     33          good           0.0\n",
+      "34        3     34          good           0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def read_trial_comments(session_dir: Path, trial_is_one_based=True, collision_run_label=None):\n",
+    "    \"\"\"\n",
+    "    Reads files like:\n",
+    "      SNHF06_Session1_000_commnet   (or .txt)\n",
+    "    Content like:\n",
+    "      good 3\n",
+    "\n",
+    "    Returns DataFrame with: session, trial, comment_label, comment_value\n",
+    "    \"\"\"\n",
+    "    session_dir = Path(session_dir)\n",
+    "    collision_run_label = str(collision_run_label)\n",
+    "    m_fallback = re.search(r\"Session(?P<session>\\d+)\", collision_run_label, re.IGNORECASE)\n",
+    "    fallback_session = int(m_fallback.group(\"session\")) if m_fallback else pd.NA\n",
+    "\n",
+    "    # accept both \"commnet\" and \"comment\", with or without extension\n",
+    "    rx = re.compile(\n",
+    "    r\".*(?:_Session(?P<session>\\d+))?_(?P<idx>\\d{3})_(?:commnet|comment)(?:\\.\\w+)?$\",\n",
+    "        re.IGNORECASE\n",
+    "    )\n",
+    "\n",
+    "    rows = []\n",
+    "    for p in sorted(session_dir.glob(\"*_commnet*\")) + sorted(session_dir.glob(\"*_comment*\")):\n",
+    "        m = rx.match(p.name)\n",
+    "        if not m:\n",
+    "            continue\n",
+    "\n",
+    "        session_str = m.group(\"session\")\n",
+    "        session = int(session_str) if session_str is not None else fallback_session\n",
+    "        idx = int(m.group(\"idx\"))                 # 000, 001, ...\n",
+    "        trial = idx if trial_is_one_based else idx\n",
+    "\n",
+    "        text = p.read_text(encoding=\"utf-8\", errors=\"ignore\").strip()\n",
+    "        parts = text.split()\n",
+    "\n",
+    "        label = parts[0] if len(parts) >= 1 else pd.NA\n",
+    "        value = parts[1] if len(parts) >= 2 else pd.NA\n",
+    "\n",
+    "        # numeric if possible\n",
+    "        try:\n",
+    "            value = float(value)\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "\n",
+    "        rows.append({\n",
+    "            \"session\": session,\n",
+    "            \"trial\": trial,\n",
+    "            \"comment_label\": label,\n",
+    "            \"comment_value\": value,\n",
+    "        })\n",
+    "\n",
+    "    df = pd.DataFrame(rows).sort_values([\"session\", \"trial\"], na_position=\"last\")\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "# --- usage ---\n",
+    "SESSION_DIR = Path(r\"D:\\Box Sync\\Box Sync\\00_BEAR_Lab\\Projects\\Kyler(Kihun) Hong\\1st_Haptic Sleeve\\PilotExperiment\\MotorLearning\\20260105_SNHF08_Session3\")\n",
+    "\n",
+    "collision_run_label = SESSION_DIR.name  # or str(SESSION_DIR) also works\n",
+    "\n",
+    "\n",
+    "comments_df = read_trial_comments(SESSION_DIR, trial_is_one_based=True, collision_run_label = collision_run_label)\n",
+    "print(comments_df)\n",
+    "col_out_path = SESSION_DIR / \"SNHF08_Session3_collisions.csv\"\n",
+    "comments_df.to_csv(col_out_path, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "e7715f60",
    "metadata": {},
    "outputs": [
@@ -317,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "80cdf58c",
    "metadata": {},
    "outputs": [
@@ -538,8 +707,7 @@
     "TOPIC_SUBSTRINGS = [\n",
     "    \"vx300s-commands-joy_processed\",\n",
     "    \"vx300s-gripper_pos\",\n",
-    "    \"vx300s-geppier_vel\",   # your spelling\n",
-    "    \"vx300s-gripper_vel\",   # common spelling (in case)\n",
+    "    \"vx300s-gripper_vel\"   # common spelling (in case)\n",
     "]\n",
     "\n",
     "TRIAL_IS_ONE_BASED = True\n",
