Jan10th2026_Updated

--- a/Segmented.ipynb
+++ b/Segmented.ipynb
@@ -191,7 +191,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
+   "id": "b84a7012",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not found: []\n",
+      "    trial outcome    start_time      end_time\n",
+      "0       0      ok  1.764694e+09  1.764694e+09\n",
+      "1       1      ok  1.764694e+09  1.764695e+09\n",
+      "2       2      ok  1.764695e+09  1.764695e+09\n",
+      "3       3      ok  1.764695e+09  1.764695e+09\n",
+      "4       4    fail           NaN           NaN\n",
+      "5       5      ok  1.764695e+09  1.764696e+09\n",
+      "6       6      ok  1.764696e+09  1.764696e+09\n",
+      "7       7      ok  1.764696e+09  1.764696e+09\n",
+      "8       8    fail           NaN           NaN\n",
+      "9       9      ok  1.764696e+09  1.764696e+09\n",
+      "10     10      ok  1.764696e+09  1.764696e+09\n",
+      "11     11      ok  1.764697e+09  1.764697e+09\n",
+      "12     12      ok  1.764697e+09  1.764697e+09\n",
+      "13     13      ok  1.764697e+09  1.764697e+09\n",
+      "14     14      ok  1.764697e+09  1.764697e+09\n",
+      "15     15      ok  1.764697e+09  1.764697e+09\n",
+      "16     16      ok  1.764697e+09  1.764697e+09\n",
+      "17     17      ok  1.764697e+09  1.764697e+09\n",
+      "18     18      ok  1.764697e+09  1.764698e+09\n",
+      "19     19      ok  1.764698e+09  1.764698e+09\n",
+      "20     20      ok  1.764698e+09  1.764698e+09\n",
+      "21     21      ok  1.764698e+09  1.764698e+09\n",
+      "22     22      ok  1.764698e+09  1.764698e+09\n",
+      "23     23      ok  1.764698e+09  1.764698e+09\n",
+      "24     24      ok  1.764698e+09  1.764699e+09\n",
+      "25     25      ok  1.764699e+09  1.764699e+09\n",
+      "26     26      ok  1.764699e+09  1.764699e+09\n",
+      "27     27      ok  1.764699e+09  1.764699e+09\n",
+      "28     28      ok  1.764699e+09  1.764699e+09\n",
+      "29     29      ok  1.764699e+09  1.764699e+09\n",
+      "30     30      ok  1.764699e+09  1.764699e+09\n",
+      "31     31      ok  1.764699e+09  1.764699e+09\n",
+      "32     32      ok  1.764699e+09  1.764699e+09\n",
+      "33     33      ok  1.764699e+09  1.764700e+09\n",
+      "34     34      ok  1.764700e+09  1.764700e+09\n",
+      "35     35      ok  1.764700e+09  1.764700e+09\n",
+      "36     36      ok  1.764700e+09  1.764700e+09\n",
+      "37     37      ok  1.764700e+09  1.764700e+09\n",
+      "38     38      ok  1.764700e+09  1.764700e+09\n",
+      "39     39      ok  1.764700e+09  1.764700e+09\n",
+      "40     40      ok  1.764700e+09  1.764700e+09\n",
+      "41     41      ok  1.764700e+09  1.764700e+09\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Trial events time stamps: using collision file to segment \n",
+    "all_events_path = r\"D:\\Box Sync\\Box Sync\\00_BEAR_Lab\\Projects\\Kyler(Kihun) Hong\\1st_Haptic Sleeve\\PilotExperiment\\MotorLearning\\20251202_SNFH06_Session1\"\n",
+    "folder = Path(all_events_path).name\n",
+    "\n",
+    "m = re.search(r\"_(?P<pid>[A-Za-z]+[0-9]+)_Session(?P<session>\\d+)\", folder, re.IGNORECASE)\n",
+    "if not m:\n",
+    "    raise ValueError(f\"Could not parse pid/session from folder name: {folder}\")\n",
+    "\n",
+    "pid = m.group(\"pid\")\n",
+    "session = int(m.group(\"session\"))\n",
+    "\n",
+    "\n",
+    "events_file = glob.glob(os.path.join(all_events_path, \"*_events_combined.csv\"))\n",
+    "collision_files = glob.glob(os.path.join(all_events_path, f\"{pid}_Session{session}_collisions.csv\"))\n",
+    "\n",
+    "if events_file and os.path.isfile(events_file[0]):\n",
+    "    print(\"Found:\", events_file[0])\n",
+    "else:\n",
+    "    print(\"Not found:\", events_file)\n",
+    "    events_file = glob.glob(os.path.join(all_events_path, \"*_events.csv\"))\n",
+    "\n",
+    "collision_df = pd.read_csv(collision_files[0])\n",
+    "events_df = pd.read_csv(events_file[0])   \n",
+    "\n",
+    "def trial_timestamps_from_events_with_fail_trials(\n",
+    "    events_df: pd.DataFrame,\n",
+    "    collision_df: pd.DataFrame,\n",
+    "    trial_col: str = \"trial\",\n",
+    "    event_col: str = \"event\",\n",
+    "    time_col: str = \"ros_time\",\n",
+    "    comment_col: str = \"comment_label\",\n",
+    "    fail_value: str = \"fail\",\n",
+    "):\n",
+    "    if comment_col in collision_df.columns:\n",
+    "        fail_mask = (\n",
+    "            collision_df[comment_col]\n",
+    "            .astype(str)\n",
+    "            .str.strip()\n",
+    "            .str.lower()\n",
+    "            .eq(str(fail_value).lower())\n",
+    "        )\n",
+    "        fail_trials = set(collision_df.loc[fail_mask, trial_col].dropna().tolist())\n",
+    "    else:\n",
+    "        fail_trials = set()\n",
+    "    out = []\n",
+    "\n",
+    "    # iterate trials based on events_df order\n",
+    "    for trial, g in events_df.groupby(trial_col, sort=False):\n",
+    "        # If fail -> only save trial + fail\n",
+    "        if trial in fail_trials:\n",
+    "            out.append({trial_col: trial, \"outcome\": \"fail\"})\n",
+    "            continue\n",
+    "\n",
+    "        g = g.sort_values(time_col)\n",
+    "\n",
+    "        share_times = g.loc[g[event_col] == \"share_button\", time_col]\n",
+    "        rec_times   = g.loc[g[event_col] == \"start_recording\", time_col]\n",
+    "        sq_times    = g.loc[g[event_col] == \"square_button\", time_col]\n",
+    "\n",
+    "        # start: prefer share_button, else start_recording\n",
+    "        if len(share_times) > 0:\n",
+    "            start_time = share_times.iloc[0]\n",
+    "        elif len(rec_times) > 0:\n",
+    "            start_time = rec_times.iloc[0]\n",
+    "        else:\n",
+    "            start_time = pd.NA\n",
+    "\n",
+    "        # end: take LAST square_button after start_time (fallback: last square_button)\n",
+    "        if len(sq_times) == 0:\n",
+    "            end_time = pd.NA\n",
+    "        else:\n",
+    "            if pd.isna(start_time):\n",
+    "                end_time = sq_times.iloc[-1]\n",
+    "            else:\n",
+    "                after = sq_times[sq_times >= start_time]\n",
+    "                end_time = after.iloc[-1] if len(after) > 0 else sq_times.iloc[-1]\n",
+    "\n",
+    "        out.append({trial_col: trial, \"outcome\": \"ok\", \"start_time\": start_time, \"end_time\": end_time})\n",
+    "\n",
+    "    return pd.DataFrame(out)\n",
+    "\n",
+    "trial_ts = trial_timestamps_from_events_with_fail_trials(\n",
+    "    events_df=events_df,\n",
+    "    collision_df=collision_df,\n",
+    "    trial_col=\"trial\",\n",
+    "    event_col=\"event\",\n",
+    "    time_col=\"ros_time\",\n",
+    "    comment_col=\"comment_label\",\n",
+    "    fail_value=\"fail\"\n",
+    ")\n",
+    "\n",
+    "print(trial_ts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "e7715f60",
    "metadata": {},
    "outputs": [
